# createsend-haskell

./: LICENSE  README.md  createsend-haskell.cabal
src/CreateSendAPI/: V3.hs
src/CreateSendAPI/V3/: List.hs  Lists.hs  PagedResult.hs  Session.hs  Subscriber.hs  Util.hs  Webhooks.hs
src/CreateSendAPI/V3/List/: Subscribers.hs  Webhooks.hs
tests/: subscribers.hs  webhooks.hs
