Name:		createsend-haskell
Version:	3.0.1.0
Stability:	experimental
License:	GPL
Build-Type:	Simple
Cabal-Version:	>= 1.9.2
Category:	Network
Synopsis:	Haskell wrapper for Campaign Monitor's HTTP API v.3.
Description:
  A Haskell wrapper for Campaign Monitor's HTTP API v.3.
  .
  Example use:
  .
  . > {-# LANGUAGE OverloadedStrings #-}
  . > 
  . > 
  . > import 		 CreateSendAPI.V3
  . > import 		 Data.Aeson.Types	(Result (..))
  . > import qualified Data.ByteString.Char8	as BSC8
  . > import qualified Data.Foldable		as F
  . > 
  . > main :: IO ()
  . > main = do
  . >     putStr "Campaign Monitor API Key: "
  . >     apiKey <- getLine
  . >     putStr "List ID: "
  . >     listId <- getLine
  . >     let authReq = reqFromAPIKey (BSC8.pack apiKey)
  . >     let listReq = listReqFromAPIKeyReq authReq (BSC8.pack listId)
  . >     -- | Print the test list's web hooks:
  . >     hooks <- getWebhooks listReq
  . >     F.mapM_ (putStrLn . show) hooks
  . >     return ()
  .
  You should be able to see you webhooks when you compile and run the above:
  .
  . > Campaign Monitor API Key: yourAPIKeyHere
  . > List ID: yourListIDHere
  . > Webhook {webhookID = "9d8b90d389501ff9b87fb10489121ae4", webhookEvents = WebhookEvents {webhookEvtSubscribe = True, webhookEvtDeactivate = True, webhookEvtUpdate = True}, webhookURL = "http://63883c55.ngrok.com/CampaignMonitor/event", webhookStatus = "Active", webhookPayloadFormat = WebhookFmtJSON}

Author:		Pavel M. Penev <pavpen@gmail.com>
Maintainer:	Pavel M. Penev <pavpen@gmail.com>
License:	GPL
Copyright:	(C) 2013–2013 Pavel M. Penev, LaRouche Policy Institute
Category:	Data
Homepage:	https://github.com/pavpen/createsend-haskell
Bug-Reports:	https://github.com/pavpen/createsend-haskell/issues


Flag build-tests
  Description:	Build test executables.
  Default:	False


Source-Repository head
  Type:		git
  Location:	https://github.com/pavpen/createsend-haskell.git

Source-Repository this
  Type:		git
  Location:	https://github.com/pavpen/createsend-haskell.git
  Tag:		3.0.0.1-alpha.1


Library
  Hs-Source-Dirs:	src
  Exposed-Modules:	CreateSendAPI.V3
                        , CreateSendAPI.V3.List
                        , CreateSendAPI.V3.List.Subscribers
                        , CreateSendAPI.V3.List.Webhooks
                        , CreateSendAPI.V3.PagedResult
                        , CreateSendAPI.V3.Session
                        , CreateSendAPI.V3.Subscriber
                        , CreateSendAPI.V3.Util
                        , CreateSendAPI.V3.Webhooks
  Build-Depends:	base < 5
                        , aeson < 1.0
                        , attoparsec-conduit >= 1.0 && <  2.0
                        , basic-prelude >= 0.1 && < 1.0
                        , bytestring
                        , conduit >= 1.0 && < 2.0
                        , conduit-extra >= 1.0
                        , data-default < 1.0
                        , http-conduit >= 2.0 && < 3.0
                        , iproute >= 1.0 && < 2.0
                        , old-locale >= 1.0 && < 2.0
                        , text
                        , time >= 1.0 && < 2.0
                        , transformers < 1.0
                        , vector < 1.0

Executable tests/webhooks
  if flag(build-tests)
      Buildable: True
  else
      Buildable: False

  Main-Is:		webhooks.hs
  Hs-Source-Dirs:	tests
  Build-Depends:	base
                        , createsend-haskell
                        , aeson < 1.0
                        , bytestring < 1.0

Executable tests/subscribers
  if flag(build-tests)
      Buildable: True
  else
      Buildable: False

  Main-Is:		subscribers.hs
  Hs-Source-Dirs:	tests
  Build-Depends:	base
                        , createsend-haskell
                        , aeson < 1.0
                        , bytestring < 1.0
                        , data-default < 1.0
                        , vector < 1.0
